Add endpoint to upload supporting docs by client
